@@ -1,4 +1,5 @@
 #built-in components
+src/Tools/Demo
 src/Tools/jEdit
 src/Tools/GraphBrowser
 src/Tools/Graphview
