@@ -1,0 +1,10 @@
+# Demo: Isabelle system component and Isabelle/Scala tool
+
+This directory constitutes an Isabelle system component. It defines an
+Isabelle/Scala tool that is available via the command-line as "isabelle demo".
+
+See also "isabelle doc system" on "isabelle components -u" to register system
+components in user-space.
+
+NOTE: User-defined components should chose a name prefix that is unlikely to
+clash with existing tools (or other user tools).
